--- a/app/blocks/photo-preview/photo-preview.pug
+++ b/app/blocks/photo-preview/photo-preview.pug
@@ -27,7 +27,7 @@ mixin photo-preview-error()
       +e.error-text Please use images with following parameters:
       +e.condition  At least 800 pixel on shortest side
       +e.condition_small JPG, BMP, PNG 300 - 10000 kb
-    +button('button')(type="button" data-delete)._border._short._wide.js-delete-file Delete this image
+    +button('button')(type="button" data-delete)._md-fz15._border._short._wide.js-delete-file Delete this image
 
 mixin photo-preview-description(select)
   - var name = select || 'description';
