--- a/app/blocks/popups/nd-popup.scss
+++ b/app/blocks/popups/nd-popup.scss
@@ -171,6 +171,12 @@
     @include screen('sm', max, 2) {
       font-size: pxtovw(17, 375);
     }
+
+    &_fz18 {
+      @include rule(font-size, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 18));
+
+      line-height: 1;
+    }
   }
 
   &__close {
