--- a/app/pages/add-space/add-space-photo.pug
+++ b/app/pages/add-space/add-space-photo.pug
@@ -32,11 +32,20 @@ block content
           +nd-side-navigation({addManager: {image: {src:  "assets/images/nd/add-photo.svg", class: "_photo"}, subtitle: "Step 5", title: "Photo" }, note: {text: "Upload images of your space. We recommend taking the photos in landscape format."}})._add
 
       +nd-content-main
-        +nd-form._app._app_pb118(data-validated-form data-submit-disabled)
+        +nd-form._app._app_pb80(data-validated-form)
           +form-section
-            +form-section-header()
+            +form-section-header()._fx
               +e.H3.title_fz24._fw400 Photos
+              +e.counter(data-file-counter) <i>0</i> / 25
+            +nd-uploader-output.is-empty.__upload-area(data-upload-area)
 
+          +nd-form-panel()._wide.is-fixed
+            .nd-content
+              .nd-container
+                +e.controls
+                  +nd-link-icon('arrow6')._underline._back._back_long.__back Back <span class="nd-hide-sm"> to previous step</span>
+                  +nd-button-icon('button', {iconBlock: true, icon: 'next', loader: true})._next._sm-h32._sm-fz16.__button_mw303(type="submit") Save and continue
 block panels
 
 block popups
+  +popup-image-cropper#popup-image-crop
