--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -43,8 +43,7 @@ block content
               +nd-link(href="add-space-description.html") Spacepool - Add Space - Title and Description (add-space-description.html)
               +nd-link(href="add-space-facilities.html") Spacepool - Add Space - Facilities (add-space-facilities.html)
               +nd-link(href="add-space-rules.html") Spacepool - Add Space - House rules(add-space-rules.html)
-              //- +nd-link(href="add-space-photo.html") Spacepool - Add Space - Photo (add-space-photo.html)
-              //- +nd-link(href="add-space-photo-2.html") Spacepool - Add Space - Photo (2 page)(add-space-photo-2.html)
+              +nd-link(href="add-space-photo.html") Spacepool - Add Space - Photo (add-space-photo.html)
               +nd-link(href="add-space-conditions.html") Spacepool - Add Space - Terms and conditions (add-space-conditions.html)
               +nd-link(href="add-space-conditions-2.html") Spacepool - Add Space - Terms and conditions (page 2) (add-space-conditions-2.html)
               +nd-link(href="add-space-listing.html") Spacepool - Add Space - Listing (add-space-listing.html)
