--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -224,6 +224,7 @@ $nd-color-filter-border: #16181c;
 $nd-color-gray3: #ccd1d2;
 $nd-color-scroll: #eee;
 $nd-color-heart-gray: #bdbdbd;
+$nd-color-border-gray: #d3dfed;
 
 // ##########
 // Transitions
