--- a/app/blocks/photo-preview/photo-preview.scss
+++ b/app/blocks/photo-preview/photo-preview.scss
@@ -1,5 +1,4 @@
-@import '../../node_modules/cropperjs/src/css/cropper.scss';
-
+// @import '../../node_modules/cropperjs/src/css/cropper.scss';
 .photo-preview {
   $b: &;
 
