--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,6 @@
 @import '../../node_modules/normalize.css/normalize.css';
 @import '../../node_modules/nouislider/distribute/nouislider.css';
+@import '../../node_modules/cropperjs/src/css/cropper.scss';
 @import 'helpers/animations'; // анимации
 @import 'helpers/variables'; // Переменные
 @import 'helpers/mixins'; // Миксины
