--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -656,6 +656,12 @@
       }
     }
 
+    &_mt38 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 38px, xlg: 38, lg: 38, md: 38, sm: 36));
+      }
+    }
+
     &_fxe {
       justify-content: flex-end;
     }
@@ -1195,6 +1201,10 @@
       padding: pxtovw(28, 375) pxtovw(18, 375) pxtovw(36, 375);
     }
 
+    &_pb62 {
+      @include rule(padding-bottom, (xl: 62px, xlg: 62, lg: 62, md: 62, sm: 42));
+    }
+
     &_pb80 {
       @include rule(padding-bottom, (xl: 80px, xlg: 80, lg: 87, md: 87, sm: 42));
     }
@@ -1206,6 +1216,10 @@
     &_mod {
       @include rule(padding-top, (xl: 55px, xlg: 55, lg: 52, md: 52, sm: 32));
       @include rule(padding-bottom, (xl: 64px, xlg: 64, lg: 48, md: 40, sm: 40));
+    }
+
+    &_pd0 {
+      padding: 0;
     }
 
     #{$b} {
