--- a/app/blocks/info-grid/info-grid.scss
+++ b/app/blocks/info-grid/info-grid.scss
@@ -70,6 +70,11 @@
     }
   }
 
+  &_edit {
+    @include rule(padding-bottom, (xl: 180px, xlg: 180, lg: 160, md: 120, sm: 52));
+    // padding: 0;
+  }
+
   &:last-child {
     @include rule(margin-bottom, (xl: 200px, xlg: 200, lg: 150, md: 100, sm: 100));
   }
