--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -165,6 +165,17 @@
       }
     }
 
+    &_nd-preview {
+      @include rule(width, (xl: 17px, xlg: 17, lg: 17, md: 17, sm: 17));
+      @include rule(height, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+
+      &:not(:last-child) {
+        #{$b}_icon_reverse & {
+          @include rule(margin-left, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+        }
+      }
+    }
+
     &_arrow2 {
       @include rule(width, (xl: 6px, xlg: 6, lg: 6, md: 6, sm: 6));
       @include rule(height, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
