--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -333,6 +333,10 @@
         margin-top: pxtovw(13, 375);
       }
 
+      #{$b}_side-nav & {
+        @include rule(margin-top, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+      }
+
       #{$b}_rs & {
         margin-top: 56px;
 
