--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -68,6 +68,12 @@
       }
     }
 
+    &_mt55 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 55px, xlg: 55, lg: 55, md: 55, sm: 55));
+      }
+    }
+
     &:last-child {
       margin-bottom: 40px;
 
@@ -417,6 +423,12 @@
         margin-top: pxtovw(53, 375);
       }
     }
+
+    &_mt {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 56px, xlg: 56, lg: 56, md: 56, sm: 56));
+      }
+    }
   }
 
   &__btn-link {
@@ -437,6 +449,14 @@
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(15, 375);
+    }
+
+    &_fw500 {
+      font-weight: 500;
+    }
+
+    &_ls {
+      letter-spacing: -.02em;
     }
   }
 
