--- a/app/pages/ha-edit-space/ha-edit-space-description.pug
+++ b/app/pages/ha-edit-space/ha-edit-space-description.pug
@@ -17,7 +17,7 @@ block content
   +nd-page-header._grid
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._underline._back.__back Back
+        +nd-link-icon('arrow5')._underline._back._back_md21.__back_md-noname Back
       +nd-page-header-main
         - var menuList = getData('sideNavEditSpace.json').menu;
         +e.mb-menu.nd-hide-from-md
@@ -31,7 +31,7 @@ block content
           +nd-side-navigation(nav, 'Title and description')
 
       +nd-content-main
-        +nd-form._app(data-validated-form data-submit-disabled)
+        +nd-form._app._app_pb62(data-validated-form data-submit-disabled)
           +form-section
             +form-section-header()
               +e.H3.title_fz24._fw400 Title and description
@@ -45,7 +45,7 @@ block content
                   +form-section-wrapper
                     +nd-form-box('Description')._bg-white
                       +nd-textarea(type="text" name="spaceDescription" placeholder="Space description" rows="1" required)._sm-fz17._h194 The office stretches across the 3rd and 4th floors of the 10 storey building. It has recently been refurbished to a high standard – matching the impressive double-height lobby. As well as plenty of terraces for the summer sun, it’s near Regent St and just a short walk to Oxford Circus.
-          +e.buttons_fxe
+          +e.buttons_fxe._mt38
             +nd-button('button', true).__button_mw320(type="submit" disabled) Save changes
 
 block panels
