--- a/app/pages/ha-edit-space/ha-edit-space-facilities.pug
+++ b/app/pages/ha-edit-space/ha-edit-space-facilities.pug
@@ -17,7 +17,7 @@ block content
   +nd-page-header._grid
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._underline._back.__back Back
+        +nd-link-icon('arrow5')._underline._back._back_md21.__back_md-noname Back
       +nd-page-header-main
         - var menuList = getData('sideNavEditSpace.json').menu;
         +e.mb-menu.nd-hide-from-md
@@ -40,10 +40,10 @@ block content
               each item in getData('nd-form-facilities.json').standart
                 +nd-facility-checkbox(item).__item
 
-          +form-section
+          +form-section._mt82
             +form-section-header()
               +e.H3.title_fz24._fw400 Extra facilities
-            +facility-grid.__facilities
+            +facility-grid.__facilities_mt10
               each item in getData('nd-form-facilities.json').extra
                 +nd-facility-checkbox(item).__item
           +nd-form-panel()._wide._hidden.is-fixed(data-hidden-panel)
