--- a/app/blocks/composite-tab/nd-composite-tabs.scss
+++ b/app/blocks/composite-tab/nd-composite-tabs.scss
@@ -15,5 +15,11 @@
     &:not(:first-child) {
       @include rule(margin-left,(xl: 42px, xlg: 42, lg: 35, md: 36, sm: 0));
     }
+
+    &.nd-checkbox {
+      &:not(:first-child) {
+        @include rule(margin-top, (sm: 20));
+      }
+    }
   }
 }
