--- a/app/pages/ha-edit-space/ha-edit-space-conditions-2.pug
+++ b/app/pages/ha-edit-space/ha-edit-space-conditions-2.pug
@@ -17,7 +17,7 @@ block content
   +nd-page-header._grid
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._underline._back.__back Back
+        +nd-link-icon('arrow5')._underline._back._back_md21.__back_md-noname Back
       +nd-page-header-main
         - var menuList = getData('sideNavEditSpace.json').menu;
         +e.mb-menu.nd-hide-from-md
@@ -31,61 +31,61 @@ block content
           +nd-side-navigation(nav, 'Terms and conditions')
 
       +nd-content-main
-        +nd-section('form')
+        +nd-section('form')._app
           +nd-section-header._fx._wrap
             +nd-section-title._fz24 Terms and conditions
             +nd-composite-tabs.__tabs
               +nd-composite-tab().__item
                 +composite-tab-checkbox()(data-composite-checkbox)
-                  +e.INPUT.input(name="typeOffer", value="hd", type="checkbox" data-composite-activator="offerHD" checked="checked")
+                  +e.INPUT.input(name="typeOffer", value="hd", type="checkbox" data-composite-activator="offerHD")
                   +e.SPAN.box
-                +composite-tab-button.is-active(data-composite-el="offerHD" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Hot Desk
+                +composite-tab-button.is-disabled(data-composite-el="offerHD" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Hot Desks
               +nd-composite-tab().__item
                 +composite-tab-checkbox()(data-composite-checkbox)
                   +e.INPUT.input(name="typeOffer", value="fd", type="checkbox" data-composite-activator="offerFD")
                   +e.SPAN.box
-                +composite-tab-button().is-disabled(data-composite-el="offerFD" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Fixed desk
-              +nd-composite-tab()._blue.__item
+                +composite-tab-button().is-disabled(data-composite-el="offerFD" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Fixed Desks
+              +nd-composite-tab().__item
                 +composite-tab-checkbox()(data-composite-checkbox)
                   +e.INPUT.input(name="typeOffer", value="mr", type="checkbox" data-composite-activator="offerMR")
                   +e.SPAN.box
-                +composite-tab-button().is-disabled(data-composite-el="offerMR" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Meeting room
+                +composite-tab-button().is-disabled(data-composite-el="offerMR" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Meeting Rooms
               +nd-composite-tab().__item
                 +composite-tab-checkbox()(data-composite-checkbox)
                   +e.INPUT.input(name="typeOffer", value="os", type="checkbox" data-composite-activator="offerOS")
                   +e.SPAN.box
                 +composite-tab-button().is-disabled(data-composite-el="offerOS" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Private offices
-          +b.nd-form_app
+          +b.nd-form_app._app_mod.__modals
             +nd-composite-group
-              +e.FIELDSET.modal.is-active(data-composite-target="offerHD")
+              +e.FIELDSET.modal.is-freeze(data-composite-target="offerHD")
                 +e.header
-                  +e.title
+                  +e.boxes
                     +nd-box._orange.__box
-                    +e.H4.title Hot desk Terms and Conditions
+                  +e.H4.title Hot desk Terms and Conditions
                 +e.content
                   +nd-form-box('T&C Description')._bg-white
                     +nd-textarea(type="text" name="termsConditionsHD" placeholder="T&C Description" data-composite-textarea="offerHD")._h194
               +e.FIELDSET.modal(data-composite-target="offerFD")
                 +e.header
-                  +e.title
+                  +e.boxes
                     +nd-box._red.__box
-                    +e.H4.title Fixed desk Terms and Conditions
+                  +e.H4.title Fixed desk Terms and Conditions
                 +e.content
                   +nd-form-box('T&C Description')._bg-white
                     +nd-textarea(type="text" name="termsConditionsFD" placeholder="T&C Description" data-composite-textarea="offerFD" disabled)._h194
               +e.FIELDSET.modal(data-composite-target="offerMR")
                 +e.header
-                  +e.title
+                  +e.boxes
                     +nd-box._blue.__box
-                    +e.H4.title Meeting room Terms and Conditions
+                  +e.H4.title Meeting room Terms and Conditions
                 +e.content
                   +nd-form-box('T&C Description')._bg-white
                     +nd-textarea(type="text" name="termsConditionsMR" placeholder="T&C Description" data-composite-textarea="offerMR" disabled)._h194
               +e.FIELDSET.modal(data-composite-target="offerOS")
                 +e.header
-                  +e.title
+                  +e.boxes
                     +nd-box._green.__box
-                    +e.H4.title Private offices Terms and Conditions
+                  +e.H4.title Private offices Terms and Conditions
                 +e.content
                   +nd-form-box('T&C Description')._bg-white
                     +nd-textarea(type="text" name="termsConditionsOS" placeholder="T&C Description" data-composite-textarea="offerOS" disabled)._h194
