--- a/app/pages/ha-edit-space/ha-edit-space-conditions.pug
+++ b/app/pages/ha-edit-space/ha-edit-space-conditions.pug
@@ -17,7 +17,7 @@ block content
   +nd-page-header._grid
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._underline._back.__back Back
+        +nd-link-icon('arrow5')._underline._back._back_md21.__back_md-noname Back
       +nd-page-header-main
         - var menuList = getData('sideNavEditSpace.json').menu;
         +e.mb-menu.nd-hide-from-md
@@ -31,42 +31,27 @@ block content
           +nd-side-navigation(nav, 'Terms and conditions')
 
       +nd-content-main
-        +nd-section('form').js-form-with-hidden-panel(data-validated-form data-submit-disabled)
+        +nd-section('form')._app.js-form-with-hidden-panel(data-validated-form data-submit-disabled)
           +nd-section-header._fx._wrap
             +nd-section-title._fz24 Terms and conditions
             +nd-composite-tabs.__tabs
-              +nd-composite-tab().__item
-                +composite-tab-checkbox()(data-composite-checkbox)
-                  +e.INPUT.input(name="typeOffer", value="hd", type="checkbox" data-composite-activator="offerHD" required)
-                  +e.SPAN.box
-                +composite-tab-button.is-disabled(data-composite-el="offerHD" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Hot Desk
-              +nd-composite-tab().__item
-                +composite-tab-checkbox()(data-composite-checkbox)
-                  +e.INPUT.input(name="typeOffer", value="fd", type="checkbox" data-composite-activator="offerFD" required)
-                  +e.SPAN.box
-                +composite-tab-button().is-disabled(data-composite-el="offerFD" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Fixed desk
-              +nd-composite-tab()._blue.__item
-                +composite-tab-checkbox()(data-composite-checkbox)
-                  +e.INPUT.input(name="typeOffer", value="mr", type="checkbox" data-composite-activator="offerMR" required)
-                  +e.SPAN.box
-                +composite-tab-button().is-disabled(data-composite-el="offerMR" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Meeting room
-              +nd-composite-tab().__item
-                +composite-tab-checkbox()(data-composite-checkbox)
-                  +e.INPUT.input(name="typeOffer", value="os", type="checkbox" data-composite-activator="offerOS" required)
-                  +e.SPAN.box
-                +composite-tab-button().is-disabled(data-composite-el="offerOS" data-src-save="#popup-reminder-save" data-src-empty="#popup-reminder-empty") Private offices
-          +info-grid
-            +e.describe
-              +e.H3.title_fz22._fw400 Add terms and conditions for every listing type
-              +e.text._indent
-                p Your listings requires terms and conditions (standart conract) for every listing type. In order to add terms and conditions for listing type, please activate particular type by pushing the Check box near the listing type name.
-                p Once you activated listing type, please write (copy and paste) terms and conditions into input field.
+              +nd-checkbox({name: 'listingType', value: "hd", checked: true})._gray-box._gray._stolzl._fz16-mix._ml13.__item Hot desks
+              +nd-checkbox({name: 'listingType', value: "fd"})._gray-box._gray._stolzl._fz16-mix._ml13.__item Fixed Desks
+              +nd-checkbox({name: 'listingType', value: "mr"})._gray-box._gray._stolzl._fz16-mix._ml13.__item Meeting Rooms
+              +nd-checkbox({name: 'listingType', value: "po"})._gray-box._gray._stolzl._fz16-mix._ml13.__item Private offices
+          +b.nd-form_app._app_pd0.__modals
+            +info-grid._edit
+              +e.describe
+                +e.H3.title_fz22._fw400 Add terms and conditions for every listing type
+                +e.text._indent
+                  p Your listings requires terms and conditions (standart conract) for every listing type. In order to add terms and conditions for listing type, please activate particular type by pushing the Check box near the listing type name.
+                  p Once you activated listing type, please write (copy and paste) terms and conditions into input field.
 
-            +e.media.hide-sm
-              +e.PICTURE.image
-                +e.SOURCE(srcset="assets/images/nd/add-space-t&c-mobile.jpg" media="(max-width: 1029px)")
-                +e.SOURCE(srcset="assets/images/nd/add-space-t&c.jpg" media="(min-width: 1030px)")
-                img(srcset="assets/images/nd/add-space-t&c.jpg")
+              +e.media.hide-sm
+                +e.PICTURE.image
+                  +e.SOURCE(srcset="assets/images/nd/add-space-t&c-mobile.jpg" media="(max-width: 1029px)")
+                  +e.SOURCE(srcset="assets/images/nd/add-space-t&c.jpg" media="(min-width: 1030px)")
+                  img(srcset="assets/images/nd/add-space-t&c.jpg")
 
           +nd-form-panel()._wide._hidden.is-fixed(data-hidden-panel)
             .nd-container
