--- a/app/pages/ha-edit-space/ha-edit-space.pug
+++ b/app/pages/ha-edit-space/ha-edit-space.pug
@@ -17,7 +17,7 @@ block content
   +nd-page-header._grid
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._underline._back.__back Back
+        +nd-link-icon('arrow5')._underline._back._back_md21.__back_md-noname Back
       +nd-page-header-main
         - var menuList = getData('sideNavEditSpace.json').menu;
         +e.mb-menu.nd-hide-from-md
