add page account settings | password

--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -83,6 +83,11 @@
     }
   }
 
+  &[type='password'] {
+    font-family: $font-pass;
+    letter-spacing: .35em;
+  }
+
   &_copy {
     @include rule(padding-right, (xl: 120px, xlg: 120, lg: 120, md: 120, sm: 120));
 
