--- a/app/pages/host-account/host-account-messages.pug
+++ b/app/pages/host-account/host-account-messages.pug
@@ -16,7 +16,7 @@ block content
   +nd-page-header._grid._grid_acc
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._back.__back.nd-hide Back
+        +nd-link-icon('arrow5')._back.__back.nd-hide-from-sm Back
       +nd-page-header-main
         - var menuList = getData('sideNavProfileHost.json').menu;
         +e.mb-menu.nd-hide-from-md
