--- a/app/pages/ui-kit/nd-ui-kit.pug
+++ b/app/pages/ui-kit/nd-ui-kit.pug
@@ -326,7 +326,25 @@ block content
               +nd-photo-preview-error
           +nd-grid-col({xl: 4})
 
+    //- Password indicator
+    +ui-section
+      +ui-section-head
+        h2 Password strength indicator
+        p Блок: block/password-indicator
+      +ui-section-content()
+        +ui-description Нейтральное состояние
+        +password-indicator() Password stregth
+        +ui-description .is-weak
+        +password-indicator().is-weak Password stregth
+        +ui-description .is-medium
+        +password-indicator().is-medium Password stregth
+        +ui-description .is-strong
+        +password-indicator().is-strong Password stregth
+
 block panels
+
+block popups
+
 
 
   script
