--- a/app/styles/helpers/_fonts.scss
+++ b/app/styles/helpers/_fonts.scss
@@ -5,6 +5,7 @@
 @include font-face('ProximaNova', normal, 600, 'ProximaNovaSemibold');
 @include font-face('ProximaNova', normal, 700, 'ProximaNovaBold');
 @include font-face('ProximaNova', normal, 800, 'ProximaNovaExtrabld');
+@include font-face('ForPassword', normal, 400, 'ForPassword');
 @include font-face('Stolzl', normal, 400, 'Stolzl-Regular');
 @include font-face('Stolzl', normal, 500, 'Stolzl-Medium');
 @include font-face('StolzlBook', normal, 400, 'Stolzl-Book');
