--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -225,6 +225,7 @@ $nd-color-gray3: #ccd1d2;
 $nd-color-scroll: #eee;
 $nd-color-heart-gray: #bdbdbd;
 $nd-color-border-gray: #d3dfed;
+$nd-color-green: #69c693;
 
 // ##########
 // Transitions
@@ -237,6 +238,7 @@ $ease-main-short: .15s ease;
 // Шрифты
 // ##########
 $font-main: 'ProximaNova', 'Arial', sans-serif; // Основной шрифт сайта
+$font-pass: 'ForPassword', 'ProximaNova', 'Arial', sans-serif; // Основной шрифт сайта
 $font-stolzl: 'Stolzl', 'ProximaNova', 'Arial', sans-serif;
 $font-stolzl-book: 'StolzlBook', 'Stolzl', 'ProximaNova', 'Arial', sans-serif;
 
