--- a/app/pages/host-account/host-account-settings-password.pug
+++ b/app/pages/host-account/host-account-settings-password.pug
@@ -13,14 +13,17 @@ block header
   - var host = true
 
 block content
-  +nd-page-header._grid._grid_acc
+  +nd-page-header._grid
     .nd-container
+      +e.title.nd-hide-from-sm Settings
       +nd-page-header-side
-        +nd-link-icon('arrow5')._back.__back.nd-hide Back
+        +nd-link-icon('arrow5')._back._back_md21.__back_md-noname.nd-hide-from-md Back
       +nd-page-header-main
         - var menuList = getData('sideNavProfileHost.json').menu;
-        +e.mb-menu.nd-hide-from-md
+        +e.mb-menu.nd-hide
           +slider-navigation(menuList, 3, 'Settings')
+        +e.mb-menu.nd-hide-from-md
+          +slider-navigation([{name: "Basic information", href: "host-account-settings-basic.html"}, {name: "Password", href: "host-account-settings-password.html"}, {name: "Company details", href: "host-account-settings-company.html"}, {name: "Notification settings", href: "host-account-settings-notifications.html"}], 1, 'Password')
 
   +nd-content
     .nd-container
@@ -31,10 +34,18 @@ block content
 
       +nd-content-main
         +nd-section
-          +nd-section-header._fx._md-pg-head.nd-hide-sm
+          +nd-section-header._fx._md-pg-head.nd-hide-md
             +nd-section-title._fz24 Account settings
             +e.menu
               +slider-navigation([{name: "Basic information", href: "host-account-settings-basic.html"}, {name: "Password", href: "host-account-settings-password.html"}, {name: "Company details", href: "host-account-settings-company.html"}, {name: "Notification settings", href: "host-account-settings-notifications.html"}], 1, 'Password')
+          +password-form.js-form-with-hidden-panel
+            +nd-form-panel()._wide._hidden.is-fixed(data-hidden-panel)
+              .nd-container
+                .nd-content__column_aside.nd-hide-md
+                .nd-content__column_main
+                  +e.controls
+                    +nd-link-icon('cross', 'button')(type="reset")._underline.__reset.js-form-reset Discard <span class="nd-hide-sm">changes</span>
+                    +nd-button('button', true).__button(type="submit") Save <span class="nd-hide-sm">changes</span>
 
 block panels
 
