issue#64 and issue#65

--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -407,9 +407,17 @@
   }
 }
 
-.datepicker_fancybox, .is-rr-popup-show .datepicker {
+.is-rr-popup-show .datepicker {
   position: fixed;
   z-index: 100000;
+}
+
+.datepicker_fancybox {
+  z-index: 100000;
+
+  .is-freeze-window & {
+    position: fixed;
+  }
 }
 
 // Стрелочка сверху над блоком
