--- a/app/blocks/photo-preview/nd-photo-preview.scss
+++ b/app/blocks/photo-preview/nd-photo-preview.scss
@@ -193,7 +193,7 @@
     }
 
     .nd-choices.is-open {
-      z-index: 5;
+      z-index: 6;
     }
   }
 
@@ -225,6 +225,27 @@
       box-shadow: 0 0 0 1px $nd-color-basic;
       background-color: $nd-color-main;
       background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L11.5 11.5' stroke='white'/%3E%3Cpath d='M11.5 1L1 11.5' stroke='white'/%3E%3C/svg%3E ");
+    }
+  }
+
+  &__loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity $ease-main;
+    z-index: 5;
+
+    #{$b}.is-load & {
+      visibility: visible;
+      opacity: 1;
     }
   }
 }
