issue#67, issue#69, issue#70

--- a/app/pages/ha-edit-space/ha-edit-space-conditions-2.pug
+++ b/app/pages/ha-edit-space/ha-edit-space-conditions-2.pug
@@ -31,7 +31,7 @@ block content
           +nd-side-navigation(nav, 'Terms and conditions')
 
       +nd-content-main
-        +nd-section('form')._app
+        +nd-section('form')._app.js-form-with-hidden-panel(data-validated-form)
           +nd-section-header._fx._wrap
             +nd-section-title._fz24 Terms and conditions
             +nd-composite-tabs.__tabs
