--- a/app/components/dashboard/dashboard.scss
+++ b/app/components/dashboard/dashboard.scss
@@ -391,7 +391,7 @@
 
       &_form {
         @include grid-column(1, 2);
-        @include grid-row(1, 3);
+        @include grid-row(1, 4);
 
         @include screen('sm', max, 2) {
           @include grid-row(1, 2);
@@ -399,7 +399,7 @@
       }
 
       &_avatar {
-        @include grid-column(3, 4);
+        @include grid-column(2, 3);
         @include grid-row(1, 2);
 
         @include screen('sm', max, 2) {
@@ -409,7 +409,7 @@
       }
 
       &_notes {
-        @include grid-column(3, 4);
+        @include grid-column(2, 3);
         @include grid-row(2, 3);
 
         padding-bottom: 20px;
@@ -542,19 +542,20 @@
 
   &_account {
     @include display-grid;
-    @include grid-template-columns(1fr 50px 1fr);
-    @include grid-template-rows(auto auto);
+    @include grid-template-columns(1fr 1fr);
+    @include grid-template-rows(auto auto auto);
+    @include rule(column-gap, (xl: 50px, xlg: 50, lg: 30, md: 20, sm: 0));
 
     @include screen('xlg', max, 2) {
-      @include grid-template-columns(1fr pxtovw(50, 1660) 1fr);
+      @include grid-template-columns(1fr 1fr);
     }
 
     @include screen('lg', max, 2) {
-      @include grid-template-columns(1fr pxtovw(30, 1366) 1fr);
+      @include grid-template-columns(1fr 1fr);
     }
 
     @include screen('md', max, 2) {
-      @include grid-template-columns(1fr pxtovw(20, 960) 1fr);
+      @include grid-template-columns(1fr 1fr);
     }
 
     @include screen('sm', max, 2) {
