--- a/app/blocks/text-block/text-block.scss
+++ b/app/blocks/text-block/text-block.scss
@@ -83,6 +83,30 @@
       }
     }
 
+    &_calendar {
+      border-radius: 0;
+      margin: 0 auto;
+
+      @include rule(width, (xl: 47px, xlg: 47, lg: 47, md: 47, sm: 47));
+      @include rule(height, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 44));
+
+      img {
+        border-radius: 0;
+      }
+    }
+
+    &_bubble {
+      border-radius: 0;
+      margin: 0 auto;
+
+      @include rule(width, (xl: 49px, xlg: 49, lg: 49, md: 49, sm: 49));
+      @include rule(height, (xl: 45px, xlg: 45, lg: 45, md: 45, sm: 45));
+
+      img {
+        border-radius: 0;
+      }
+    }
+
     #{$b}__media_contain & {
       position: relative;
       overflow: hidden;
