--- a/app/blocks/info-notices/nd-info-notices.scss
+++ b/app/blocks/info-notices/nd-info-notices.scss
@@ -143,7 +143,6 @@
     background-position: 50% 50%;
     background-image: $icon-cross;
 
-
     @include rule(background-size, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
     @include rule(width, (xl: 56px, xlg: 56, lg: 56, md: 56, sm: 56));
     @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
@@ -152,6 +151,28 @@
   &__notice {
     &:not(:first-child) {
       @include rule(margin-top, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 22));
+    }
+  }
+
+  &__info {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    text-align: center;
+
+    @include rule(padding-top, (xl: 110px, xlg: 110, lg: 110, md: 110, sm: 70));
+    @include rule(padding-left, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 20));
+    @include rule(padding-right, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 20));
+    @include rule(padding-bottom, (xl: 110px, xlg: 110, lg: 110, md: 110, sm: 70));
+    @include rule(min-height, (xl: 500px, xlg: 500, lg: 500, md: 500, sm: 0));
+
+    .text-block {
+
+      &__title {
+        &:not(:first-child) {
+          @include rule(margin-top, (xl: 64px, xlg: 64, lg: 64, md: 64, sm: 45));
+        }
+      }
     }
   }
 }
