--- a/app/components/user-menu-panel/user-menu-panel.scss
+++ b/app/components/user-menu-panel/user-menu-panel.scss
@@ -69,6 +69,8 @@
     border-top: none;
     padding: 0;
     max-width: 100vw;
+    transition: opacity $ease-main, transform $ease-main;
+    will-change: opacity, transform;
 
     @include screen('md', max, 2) {
       visibility: visible;
@@ -84,6 +86,13 @@
     .is-filter-popup-opened & {
       @include screen('sm', max, 2) {
         visibility: hidden;
+      }
+    }
+
+    .is-keyboard-visible & {
+      @include screen('sm', max, 2) {
+        opacity: 0;
+        transform: translate3d(0, 100%, 0);
       }
     }
   }
