hidden panel on focus input, textarea or contenteditable field

--- a/app/components/page-header/nd-page-header.scss
+++ b/app/components/page-header/nd-page-header.scss
@@ -225,6 +225,13 @@
     }
 
     #{$b} {
+      &__title {
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(1, 2);
+        }
+      }
+
       &__column {
         display: flex;
 
