issue#69, host account hd pages for settings, company details

--- a/app/blocks/board/board.scss
+++ b/app/blocks/board/board.scss
@@ -119,6 +119,10 @@
     }
   }
 
+  &_pb36 {
+    @include rule(padding-bottom, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 36));
+  }
+
   &__header {
     display: flex;
     justify-content: space-between;
@@ -227,6 +231,10 @@
       }
     }
 
+    &_tac {
+      text-align: center;
+    }
+
     &_wide {
       width: 100%;
     }
@@ -258,6 +266,10 @@
         padding-right: pxtovw(40, 375);
         background-size: pxtovw(25, 375) pxtovw(15, 375);
       }
+    }
+
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 62px, xlg: 62, lg: 62, md: 62, sm: 62));
     }
   }
 
@@ -450,6 +462,18 @@
       }
     }
 
+    &_mt42 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 42px, xlg: 42, lg: 42, md: 42, sm: 42));
+      }
+    }
+
+    &_mt60 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
+      }
+    }
+
     &_end {
       justify-content: flex-end;
     }
@@ -598,6 +622,24 @@
 
     &_stolzl {
       font-family: $font-stolzl;
+    }
+  }
+
+  &__profile {
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 34px, xlg: 34, lg: 34, md: 34, sm: 34));
+    }
+  }
+
+  &__pass-strength {
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 22));
+    }
+  }
+
+  &__pass-field {
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 44));
     }
   }
 
