--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -231,6 +231,15 @@
       }
     }
 
+    &_nd-edit {
+      @include rule(width, (xl: 17px, xlg: 17, lg: 17, md: 17, sm: 17));
+      @include rule(height, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+
+      &:not(:last-child) {
+        @include rule(margin-right, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
+      }
+    }
+
     &_arrow6 {
       @include rule(width, (xl: 23px, xlg: 23, lg: 23, md: 23, sm: 22));
       @include rule(height, (xl: 11px, xlg: 11, lg: 11, md: 11, sm: 11));
