--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -1036,6 +1036,12 @@
 
   &__dashboard {
     width: 100%;
+
+    &_mt {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 35));
+      }
+    }
   }
 
   &__add {
