--- a/app/blocks/uploader/nd-uploader.scss
+++ b/app/blocks/uploader/nd-uploader.scss
@@ -104,6 +104,7 @@
     justify-content: start;
     align-items: stretch;
 
+    @include rule(min-height, (xl: 320px, xlg: 320, lg: 270, md: 240, sm: 290));
     @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
     @include rule(padding-top, (xl: 44px, xlg: 44, lg: 64, md: 38, sm: 48));
     @include rule(padding-bottom, (xl: 30px, xlg: 30, lg: 33, md: 24, sm: 34));
