--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -211,6 +211,7 @@ include ../components/advanced-filter/advanced-filter
 include ../components/breadcrumbs-box/breadcrumbs-box
 include ../components/cancelation-form/cancelation-form
 include ../components/compact-filter/compact-filter
+include ../components/company-form/company-form
 include ../components/condition-search/condition-search
 include ../components/content/content
 include ../components/content/nd-content
