--- a/app/pages/host-account/host-account-finances.pug
+++ b/app/pages/host-account/host-account-finances.pug
@@ -30,7 +30,18 @@ block content
           +nd-side-navigation(nav, 'Finances')._profile._profile_ha
 
       +nd-content-main
-        +records._acc
+        +nd-section
+          +nd-section-header._fx._md-pg-head.nd-hide-sm
+            +nd-section-title._fz24 Finances
+            +e.menu
+              +slider-navigation([{name: "Statements", href: "host-account-finances-statements.html"}, {name: "Bank account details", href: "host-account-finances.html"}, {name: "Account stats", href: "host-account-finances.html"}], 0)
+          +dashboard._host-account
+            +board.__board_ha._ha_state
+              +board-title._fz22 Statements
+            +board.__board_ha._ha_stats
+              +board-title._fz22._tac Stats
+            +board.__board_ha._ha_bank
+              +board-title._fz22 Bank account details
 
 block panels
 
