--- a/app/pages/host-account/host-account-settings-notifications.pug
+++ b/app/pages/host-account/host-account-settings-notifications.pug
@@ -13,7 +13,7 @@ block header
   - var host = true
 
 block content
-  +nd-page-header._grid._grid_acc
+  +nd-page-header._grid
     .nd-container
       +e.title.nd-hide-from-sm Settings
       +nd-page-header-side
@@ -34,10 +34,14 @@ block content
 
       +nd-content-main
         +nd-section
-          +nd-section-header._fx._md-pg-head.nd-hide-sm
+          +nd-section-header._fx._md-pg-head.nd-hide-md
             +nd-section-title._fz24 Account settings
             +e.menu
               +slider-navigation([{name: "Basic information", href: "host-account-settings-basic.html"}, {name: "Password", href: "host-account-settings-password.html"}, {name: "Company details", href: "host-account-settings-company.html"}, {name: "Notification settings", href: "host-account-settings-notifications.html"}], 3, 'Notification settings')
+
+          +e.dashboard_mt
+            +board._pb36
+              +board-title._fz22 Notification settings
 
 block panels
 
