--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -270,6 +270,18 @@
         right: 0;
       }
     }
+
+    &_mt60 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
+      }
+    }
+
+    &_mt30 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+      }
+    }
   }
 
   &__header {
