--- a/app/components/dashboard/dashboard.scss
+++ b/app/components/dashboard/dashboard.scss
@@ -444,6 +444,52 @@
         @include grid-row(4, 5);
       }
     }
+
+    &_ha {
+      &_info {
+        @include grid-column(1, 2);
+        @include grid-row(1, 4);
+
+        @include screen('md', max, 2) {
+          @include grid-column(1, 3);
+          @include grid-row(2, 3);
+        }
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(2, 3);
+        }
+      }
+
+      &_profile {
+        @include grid-column(2, 3);
+        @include grid-row(1, 2);
+
+        @include screen('md', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(1, 2);
+        }
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+        }
+      }
+
+      &_pass {
+        @include grid-column(2, 3);
+        @include grid-row(2, 3);
+
+        @include screen('md', max, 2) {
+          @include grid-column(2, 3);
+          @include grid-row(1, 2);
+        }
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(3, 4);
+        }
+      }
+    }
   }
 
   &_rent {
@@ -581,6 +627,30 @@
       @include screen('sm', max, 2) {
         margin-top: pxtovw(10, 375);
       }
+    }
+  }
+
+  &_host-account {
+    @include display-grid;
+    @include grid-template-columns(1fr 388px);
+    @include grid-template-rows(auto auto auto);
+    @include rule(column-gap, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 0));
+
+    @include screen('xlg', max, 2) {
+      @include grid-template-columns(1fr pxtovw(388, 1660));
+    }
+
+    @include screen('lg', max, 2) {
+      @include grid-template-columns(1fr pxtovw(388, 1366));
+    }
+
+    @include screen('md', max, 2) {
+      @include grid-template-columns(1fr 1fr);
+    }
+
+    @include screen('sm', max, 2) {
+      @include grid-template-columns(100%);
+      @include grid-template-rows(auto auto auto);
     }
   }
 }
