--- a/app/pages/host-account/host-account-settings-basic.pug
+++ b/app/pages/host-account/host-account-settings-basic.pug
@@ -13,7 +13,7 @@ block header
   - var host = true
 
 block content
-  +nd-page-header._grid._grid_acc
+  +nd-page-header._grid
     .nd-container
       +e.title.nd-hide-from-sm Settings
       +nd-page-header-side
@@ -34,10 +34,43 @@ block content
 
       +nd-content-main
         +nd-section
-          +nd-section-header._fx._md-pg-head.nd-hide-sm
+          +nd-section-header._fx._md-pg-head.nd-hide-md
             +nd-section-title._fz24 Account settings
             +e.menu
               +slider-navigation([{name: "Basic information", href: "host-account-settings-basic.html"}, {name: "Password", href: "host-account-settings-password.html"}, {name: "Company details", href: "host-account-settings-company.html"}, {name: "Notification settings", href: "host-account-settings-notifications.html"}], 0, 'Basic information')
+
+          +dashboard('form')._ha-basic.__dashboard_mt.js-form-with-hidden-panel(data-validated-form)
+            +board._pb36.__board_ha._ha_upload
+              +board-title._fz22._tac Account userpic
+              +nd-avatar-uploader('section', 'avatar')._vertical._center.__uploader
+                +nd-link._underline.__remove(data-uploader-clear="avatar" data-callback="serverSave") Delete Current Userpic
+            +board._pb36.__board_ha._ha_form
+              +board-title._fz22 Account information
+              +nd-form('section').__form
+                +e.row
+                  +form-section-wrapper
+                    +nd-form-box('First name')._bg-white
+                      +nd-input(type="text" name="firstName" placeholder="First name" required value="Eugene")
+                    +e.row
+                      +form-section-wrapper
+                        +nd-form-box('Last name')._bg-white
+                          +nd-input(type="text" name="lastName" placeholder="Last name" required value="Sheeleen")
+                    +e.row
+                      +form-section-wrapper
+                        +nd-form-box('Email')._bg-white
+                          +nd-input(type="email" name="email" placeholder="Email" required value="esdesign.lv@gmail.com")
+                    +e.row
+                      +form-section-wrapper
+                        +nd-form-box('Phone No')._bg-white
+                          +nd-input(type="tel" name="phoneNumber" placeholder="Phone number" value="2359892531")
+
+            +nd-form-panel()._wide._hidden.is-fixed(data-hidden-panel)
+              .nd-container
+                .nd-content__column_aside.nd-hide-md
+                .nd-content__column_main
+                  +e.controls
+                    +nd-link-icon('cross', 'button')(type="reset")._underline.__reset.js-form-reset Discard <span class="nd-hide-sm">changes</span>
+                    +nd-button('button', true).__button(type="submit") Save <span class="nd-hide-sm">changes</span>
 
 block panels
 
